<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anuroop.mycal.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:id="@+id/button1"
        android:layout_marginTop="39dp"
        android:minWidth="80dp"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/button4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button1"
        android:layout_centerHorizontal="true"
        android:minWidth="80dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_alignStart="@+id/button6"
        android:minWidth="80dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/button4"
        android:layout_below="@+id/button1"
        android:layout_toStartOf="@+id/button2"
        android:minWidth="80dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:id="@+id/button5"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:minWidth="80dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button5"
        android:layout_alignStart="@+id/button9"
        android:minWidth="80dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:id="@+id/button8"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:id="@+id/button9"
        android:layout_below="@+id/button6"
        android:layout_alignStart="@+id/buttonE"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/button10"
        android:layout_alignTop="@+id/buttonC"
        android:layout_alignStart="@+id/button7"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/buttonC"
        android:layout_below="@+id/button8"
        android:layout_centerHorizontal="true"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:id="@+id/buttonE"
        android:layout_alignTop="@+id/buttonC"
        android:layout_toEndOf="@+id/buttonC"
        android:minWidth="80dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/buttonA"
        android:layout_alignTop="@+id/buttonS"
        android:layout_toStartOf="@+id/buttonC"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:id="@+id/buttonS"
        android:layout_below="@+id/buttonC"
        android:layout_centerHorizontal="true"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mul"
        android:id="@+id/buttonM"
        android:layout_below="@+id/buttonE"
        android:layout_alignStart="@+id/buttonE"
        android:minWidth="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        android:id="@+id/buttonD"
        android:minWidth="80dp"
        android:layout_below="@+id/buttonM"
        android:layout_toEndOf="@+id/buttonS" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttond"
        android:id="@+id/buttond"
        android:layout_below="@+id/buttonA"
        android:layout_alignStart="@+id/buttonA"
        android:minWidth="80dp"/>
</RelativeLayout>
